# Heraeus-Saw-Software

./: LimitSwitch.py  RFIDScan.py  SheetsAPI.py  Timer.py  client_secret_633225475437-2aq3k77dihla8l20lvr8ljrnm7hov6oc.apps.googleusercontent.com.json  fake_rpi-0.7.1-py3-none-any.whl  main.py  pyproject.toml  quickstart.py  token.pickle
scripts/: .~lock.TestSheet.xls#  LimitSwitch.py  RFIDBackgroundScript.py  RFIDBackroundScript.py  RFIDScan.py  SheetsAPI.py  TestSheet.xls  Timer.py  VibrationSensor.py  datathing.py  librecalc.py  main.py  quickstart-1614790577278-273c4a82a923.json
scripts/sheets/: Template.xls
scripts/webpage/: data.csv  data.php
webpage/: getData.py  index.html  index.php
