[tool.poetry]
name = "heraeus-saw-software"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^2.7"
gpiozero = "^1.5"
gspread = "^3.7"
oauth2client = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
